k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meatmanager-web
  namespace: meatmanager
spec:
  selector:
    app: meatmanager-web
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  type: ClusterIP
